--- a/app/views/sql_probe/main/index.html.erb
+++ b/app/views/sql_probe/main/index.html.erb
@@ -4,4 +4,35 @@
 <%= button_to "Stop", stop_path, disabled: !SqlProbe.listening? %>
 <%= button_to "Reset", reset_path %>
 
-Hello
+<table class="table table-striped table-condensed">
+  <tr>
+     <th>Controller</th>
+     <th>Action</th>
+     <th>Time</th>
+     <% @tables.each do |name, count| %>
+       <th><%= name %> (<%= count %>)</th>
+     <% end %>
+  </tr>
+
+  <% @stats.each do |event| %>
+  <tr>
+    <td><%= event[:controller] %></td>
+    <td><%= event[:action] %></td>
+    <td><%= event[:file_ts] %></td>
+    <% @tables.each do |name, _| %>
+
+      <td>
+        <%= event[:stats].reduce(0){ |acc, s|
+          acc + s[:tables].select{|t| t == name}.size
+         } %>
+      <!-- #  -->
+      </td>
+    <% end %>
+  </tr>
+  <% end %>
+</table>
+
+<hr>
+
+<h6>Raw Data</h6>
+<pre><%= JSON.pretty_generate(@stats) %></pre>
