--- a/app/views/sql_probe/main/index.html.erb
+++ b/app/views/sql_probe/main/index.html.erb
@@ -1,10 +1,30 @@
-<%= flash.to_h %>
+<% if flash[:success] %>
+  <div class="alert alert-info" role="alert">
+    <%= flash[:success] %>
+  </div>
+<% end %>
 
-<%= button_to "Start", start_path, disabled: SqlProbe.listening? %>
-<%= button_to "Stop", stop_path, disabled: !SqlProbe.listening? %>
-<%= button_to "Reset", reset_path %>
+<h1>Sql Probe</h1>
 
-<table class="table table-striped table-condensed">
+<div>
+  <div class='pull-right'>
+    <div class='col-xs-6'>
+      <% if SqlProbe.listening? %>
+        <%= button_to "Stop listening", stop_path, disabled: !SqlProbe.listening?, class: 'btn btn-lg btn-warning' %>
+      <% else %>
+        <%= button_to "Start listening", start_path, disabled: SqlProbe.listening?, class: 'btn btn-lg btn-success' %>
+      <% end %>
+    </div>
+
+    <div class='col-xs-6'>
+      <%= button_to "Clear queries", reset_path, class: 'btn btn-lg btn-danger' %>
+    </div>
+  </div>
+</div>
+
+
+<h2>Queries</h2>
+<table class="table table-striped table-hover">
   <tr>
      <th>Controller</th>
      <th>Action</th>
@@ -20,12 +40,10 @@
     <td><%= event[:action] %></td>
     <td><%= event[:file_ts] %></td>
     <% @tables.each do |name, _| %>
-
       <td>
         <%= event[:stats].reduce(0){ |acc, s|
           acc + s[:tables].select{|t| t == name}.size
          } %>
-      <!-- #  -->
       </td>
     <% end %>
   </tr>
@@ -34,5 +52,5 @@
 
 <hr>
 
-<h6>Raw Data</h6>
+<h2>Raw Data</h2>
 <pre><%= JSON.pretty_generate(@stats) %></pre>
