--- a/app/views/layouts/sql_probe/application.html.erb
+++ b/app/views/layouts/sql_probe/application.html.erb
@@ -1,12 +1,13 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>SqlProbe</title>
+  <title>SQL Probe</title>
   <%= stylesheet_link_tag    "sql_probe/application", media: "all" %>
   <%= javascript_include_tag "sql_probe/application" %>
   <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
   <%= csrf_meta_tags %>
+  <%= yield :head %>
 </head>
 <body>
 
