--- a/app/views/sql_probe/main/index.html.erb
+++ b/app/views/sql_probe/main/index.html.erb
@@ -1,24 +1,10 @@
+<%= render 'navbar' %>
+
 <% if flash[:success] %>
   <div class="alert alert-info" role="alert">
     <%= flash[:success] %>
   </div>
 <% end %>
-
-<div>
-  <div class='pull-right'>
-    <div class='col-xs-6'>
-      <% if SqlProbe.listening? %>
-        <%= button_to "Stop listening", stop_path, disabled: !SqlProbe.listening?, class: 'btn btn-lg btn-warning' %>
-      <% else %>
-        <%= button_to "Start listening", start_path, disabled: SqlProbe.listening?, class: 'btn btn-lg btn-success' %>
-      <% end %>
-    </div>
-
-    <div class='col-xs-6'>
-      <%= button_to "Clear queries", reset_path, class: 'btn btn-lg btn-danger' %>
-    </div>
-  </div>
-</div>
 
 <h2>Query Summary</h2>
 <%= render 'pivot', pivot: @pivot if @pivot.any? %>
