Display event details via `events#show`

--- a/app/views/layouts/sql_probe/application.html.erb
+++ b/app/views/layouts/sql_probe/application.html.erb
@@ -10,6 +10,25 @@
 body {
   padding-top: 1em;
 }
+
+.text-pre,
+.td-pre {
+  font-size: .9em;
+  font-family: monospace;
+  white-space: pre;
+}
+
+.td-pre {
+  max-width: 50em;
+  overflow: scroll;
+}
+
+.textarea-code {
+  font-size: .9em;
+  font-family: monospace;
+  width: 50em;
+  height: 22em;
+}
 </style>
   <%= yield :head %>
 </head>
@@ -21,5 +40,6 @@ body {
 
 <script src="https://code.jquery.com/jquery-3.2.0.min.js" integrity="sha256-JAW99MJVpJBGcbzEuXk4Az05s/XyDdBomFqNlM3ic+I=" crossorigin="anonymous"></script>
 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/ace/1.2.6/ace.js" integrity="sha256-xrr4HH5eSY+cFz4SH7ja/LaAi9qcEdjMpeMP49/iOLs=" crossorigin="anonymous"></script>
 </body>
 </html>
