Move JS code into show.erb

--- a/app/views/sql_probe/events/show.erb
+++ b/app/views/sql_probe/events/show.erb
@@ -5,8 +5,6 @@
   width: 100%;
   height: 30em;
   position: fixed;
-  left: 0;
-  right; 0;
   bottom: 0;
 }
 </style>
@@ -32,3 +30,39 @@
   <% end %>
   </table>
 </div>
+
+<% content_for :javascript do %>
+<script>
+$(document).ready(function() {
+  // add editor div
+  var callerCode = $('<div id="caller-code"></div>');
+  $('body').append(callerCode);
+
+  // configure editor
+  var editor = ace.edit("caller-code");
+  editor.getSession().setMode("ace/mode/ruby");
+  editor.setReadOnly(true);
+
+  // Override default click behavior to make ajax
+  // request to get the source code from the locator
+  // and set the value of the editor to the response.
+  // Then jump to the line in the response.
+  $('.caller-link').on('click', function (e) {
+    var $this = $(this);
+    e.preventDefault();
+
+    $.ajax({
+      url: $this.attr("href"),
+      success: function (data) {
+        var editor = ace.edit("caller-code");
+        editor.setValue(data.code);
+        editor.gotoLine(data.line, 0, true);
+      },
+      error: function (data) {
+        console.error('could not get source. data: ', data);
+      }
+    });
+  })
+});
+</script>
+<% end %>
