Make code split resizeable

--- a/app/views/layouts/sql_probe/application.html.erb
+++ b/app/views/layouts/sql_probe/application.html.erb
@@ -4,6 +4,8 @@
   <title>SQL Probe</title>
   <%= stylesheet_link_tag    "sql_probe/application", media: "all" %>
   <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
+  <link rel="stylesheet" href="//code.jquery.com/ui/1.12.1/themes/smoothness/jquery-ui.css">
+
   <%= csrf_meta_tags %>
 <style>
 body {
