--- a/app/views/sql_probe/events/show.erb
+++ b/app/views/sql_probe/events/show.erb
@@ -1,20 +1,23 @@
 <% content_for :head do %>
 <style>
 #caller-resizable {
-  border-top: 3px solid lightgrey;
+  border-top: 1px solid #888;
+  background: #eee;
   width: 100%;
   height: 20em;
   position: fixed;
   bottom: 0;
   left: 0;
   right: 0;
+  color: #aaa;
 }
 #caller-code {
+  border-top: 1px solid #888;
   position: absolute;
   bottom: 0;
   left: 0;
   right: 0;
-  top: 0;
+  top: 1.75em;
 }
 
 a.caller-link:focus {
@@ -44,7 +47,9 @@ a.caller-link:focus {
   </table>
 </div>
 
-<div id="caller-resizable">
+<div id="caller-resizable" class="container">
+  <div class="pull-right">Use `j` and `k` to select a different trace</div>
+  <div id="caller-label"><em>Select a line of backtrace to load code.</em></div>
   <div id="caller-code"></div>
 </div>
 
@@ -62,6 +67,7 @@ $(document).ready(function() {
     $.ajax({
       url: $link.attr("href"),
       success: function (data) {
+        $('#caller-label').text(data.file);
         editor.setValue(data.code);
 
         // resize() is required to fix a bug.
