Show statements by frequency

--- a/app/views/layouts/sql_probe/application.html.erb
+++ b/app/views/layouts/sql_probe/application.html.erb
@@ -12,14 +12,13 @@ body {
   padding-top: 1em;
 }
 
-.text-pre,
-.td-pre {
+.text-pre {
   font-size: .9em;
   font-family: monospace;
   white-space: pre;
 }
 
-.td-pre {
+.td-scroll {
   max-width: 50em;
   overflow: scroll;
 }
