--- a/app/views/sql_probe/main/_help.erb
+++ b/app/views/sql_probe/main/_help.erb
@@ -4,6 +4,7 @@
   </div>
   <div class="panel-body">
     <ul>
+      <li>Total Queries may not be the sum of tables effected because some queries may touch multiple tables.</li>
       <li>First column is the `controller#action`.</li>
       <li>Successive column headings are table names accessed by everything we've collected so far.</li>
       <li>The number in the cells is number of times a select, insert, update, or delete has occured for that table within the action.</li>
