--- a/app/views/sql_probe/events/show.erb
+++ b/app/views/sql_probe/events/show.erb
@@ -1,5 +1,5 @@
 <% content_for :head do %>
-<style>
+  <style>
 #caller-resizable {
   border-top: 1px solid #888;
   background: #eee;
@@ -30,20 +30,32 @@ a.caller-link:focus {
   font-family: sans-serif;
   color: rgb(212, 63, 58);
 }
-</style>
+  </style>
 <% end %>
 
-<div class="panel panel-default sync-margin" style="margin-bottom: 20em">
+<div class="panel panel-default">
   <div class="panel-heading">
-    <h3 class="panel-title"><%= @event['name'] %></h3>
+    <h3 class="panel-title">General Action Info</h3>
   </div>
   <div class="panel-body">
-    <div class="text-pre"><%= JSON.pretty_generate @event.except('name', 'events') %></div>
+    <ul class="nav nav-pills pull-right">
+      <li role="presentation"><a href="#frequency">Statements by Frequency</a></li>
+      <li role="presentation"><a href="#natural">Statements in Natural Execution Order</a></li>
+    </ul>
+    <div class="text-pre"><%= JSON.pretty_generate @event.except('events') %></div>
   </div>
+</div>
 
+<div class="panel panel-default">
+  <div class="panel-heading">
+    <h3 id="frequency" class="panel-title">Statements by Frequency</h3>
+  </div>
+  <div class="panel-body">
+    Select a SQL statement to jump to it's position in the natural order.
+  </div>
   <table class="table">
     <tr>
-      <th>SQL Statements by Frequency</th>
+      <th>SQL</th>
       <th class="text-right">Callers</th>
       <th class="text-right">Total Seconds</th>
       <th class="text-right">Avg Seconds</th>
@@ -57,28 +69,36 @@ a.caller-link:focus {
       </tr>
     <% end %>
   </table>
+</div>
 
-  <table class="table table-striped table-bordered">
-    <tr>
-      <th>SQL Statements Chronological Order</th>
-      <th>Call Stack</th>
-    </tr>
-    <% last_sql   = nil %>
-    <% @event['events'].each do |event| %>
+<div class="panel panel-default sync-margin" style="margin-bottom: 20em">
+  <div class="panel-heading">
+    <h3 id="natural" class="panel-title">Statements in Natural Execute Order</h3>
+  </div>
+  <div class="panel-body">
+    Select a back trace to see the source code in the bottom panel.
+  </div>
+    <table class="table table-striped table-bordered">
       <tr>
-        <td class="td-scroll" id="<%= event['index'] %>">
-          <% clearfix = nil %>
-          <% if (dups = event['count'] - 1) > 1 %>
-            <% clearfix = 'clearfix' %>
-            <%= ghetto_bar(event['count'], class: 'duplicate pull-right') %>
-          <% end %>
-          <div class="<%= clearfix %> text-pre">-- duration: <%= event['duration'].round(1) %>s
-<%= SqlProbe::Utils.pretty_sql(event['sql']) -%></div>
-        </td>
-        <td class="text-pre td-scroll"><%= caller_links(event['caller']) %></td>
+        <th>SQL</th>
+        <th>Call Stack</th>
       </tr>
-    <% end %>
-  </table>
+      <% last_sql   = nil %>
+      <% @event['events'].each do |event| %>
+        <tr>
+          <td class="td-scroll" id="<%= event['index'] %>">
+            <% clearfix = nil %>
+            <% if (dups = event['count'] - 1) > 1 %>
+              <% clearfix = 'clearfix' %>
+              <%= ghetto_bar(event['count'], class: 'duplicate pull-right') %>
+            <% end %>
+            <div class="<%= clearfix %> text-pre">-- duration: <%= event['duration'].round(1) %>s
+<%= SqlProbe::Utils.pretty_sql(event['sql']) -%></div>
+          </td>
+          <td class="text-pre td-scroll"><%= caller_links(event['caller']) %></td>
+        </tr>
+      <% end %>
+    </table>
 </div>
 
 <div id="caller-resizable" class="container">
@@ -88,7 +108,7 @@ a.caller-link:focus {
 </div>
 
 <% content_for :javascript do %>
-<script>
+  <script>
 $(document).ready(function() {
 
   // configure editor
@@ -155,5 +175,5 @@ $(document).ready(function() {
   });
   $(window).on('resize', handleResize);
 });
-</script>
+  </script>
 <% end %>
