--- a/app/views/layouts/sql_probe/sql_probe.html.erb
+++ b/app/views/layouts/sql_probe/sql_probe.html.erb
@@ -8,6 +8,11 @@
 
   <%= csrf_meta_tags %>
 <style>
+*, *:before, *:after {
+  box-sizing: border-box;
+  transition: all .2s ease;
+}
+
 body {
   padding-top: 1em;
 }
