--- a/app/views/layouts/sql_probe/sql_probe.html.erb
+++ b/app/views/layouts/sql_probe/sql_probe.html.erb
@@ -10,7 +10,7 @@
 <style>
 *, *:before, *:after {
   box-sizing: border-box;
-  transition: all .2s ease;
+  /*transition: all .2s ease;*/
 }
 
 body {
