--- a/app/views/sql_probe/events/_timeline.erb
+++ b/app/views/sql_probe/events/_timeline.erb
@@ -1,4 +1,8 @@
 <div id="timeline"></div>
+<% content_for :head do %>
+<style>
+</style>
+<% end %>
 <% content_for :javascript do %>
 <script type="text/javascript" src="https://www.gstatic.com/charts/loader.js"></script>
 <script>
@@ -7,7 +11,7 @@
   google.charts.setOnLoadCallback(drawChart);
   function drawChart() {
     var container = document.getElementById('timeline');
-    var chart = new google.visualization.Timeline(container);
+    var timeline = new google.visualization.Timeline(container);
     var dataTable = new google.visualization.DataTable();
 
     dataTable.addColumn({ type: 'string', id: 'Title' });
@@ -17,11 +21,25 @@
 
     var options = {
       // @see http://stackoverflow.com/a/18643370/613772
-      // 42 is the magic number
-      height: (<%= data.group_by{|a,| a}.size %> * 42) + 40
+      // 42 is the magic number to get all the rows to display
+      // without overflow.
+      height: (<%= data.group_by{|a,| a}.size %> * 42) + 40,
+      avoidOverlappingGridLines: false,
+      backgroundColor: 'transparent',
+      timeline: {
+        rowLabelStyle: { fontSize: 12, padding: 0}
+      }
     };
 
-    chart.draw(dataTable, options);
+    timeline.draw(dataTable, options);
+/*
+    google.visualization.events.addListener(timeline, 'select', function() {
+      var row = timeline.getSelection()[0].row;
+
+      alert('You selected ' + data.getValue(row, 0));
+    });
+    */
+
   }
 })();
 </script>
