--- a/app/views/sql_probe/events/show.erb
+++ b/app/views/sql_probe/events/show.erb
@@ -1,36 +1,16 @@
 <% content_for :head do %>
-  <style>
-#caller-resizable {
-  border-top: 1px solid #888;
-  background: #eee;
-  width: 100%;
-  height: 1.75em;
-  position: fixed;
-  bottom: 0;
-  left: 0;
-  right: 0;
-  color: #aaa;
+<style>
+/* 
+   Remove dark gray striped background in timeline
+   @see http://stackoverflow.com/a/39045621/613772
+*/
+svg g:first-of-type path {
+    stroke: #e6e6e6;
 }
-#caller-code {
-  border-top: 1px solid #888;
-  position: absolute;
-  bottom: 0;
-  left: 0;
-  right: 0;
-  top: 1.75em;
+svg g:first-of-type rect:not(:last-child) {
+    fill: #ffffff;
 }
-
-a.caller-link:focus {
-  background: yellow;
-}
-
-.duplicate {
-  font-size: 1em; 
-  font-weight: bold;
-  font-family: sans-serif;
-  color: rgb(212, 63, 58);
-}
-  </style>
+</style>
 <% end %>
 
 <div class="panel panel-default">
@@ -38,11 +18,7 @@ a.caller-link:focus {
     <h3 class="panel-title">General Action Info</h3>
   </div>
   <div class="panel-body">
-    <ul class="nav nav-pills pull-right">
-      <li role="presentation"><a href="#frequency">Statements by Frequency</a></li>
-      <li role="presentation"><a href="#natural">Statements in Natural Execution Order</a></li>
-    </ul>
-    <div class="text-pre"><%= JSON.pretty_generate @event.except('events') %></div>
+    <div class="text-pre"><%= JSON.pretty_generate @event.except('events', 'consolidated') %></div>
   </div>
 </div>
 
@@ -50,143 +26,56 @@ a.caller-link:focus {
   <div class="panel-heading">
     <h3 class="panel-title">Timeline</h3>
   </div>
-  <%= render 'timeline', data: @timeline_data do %>
-  <% end %>
+  <div id="timeline"></div>
 </div>
 
-<div class="panel panel-default">
-  <div class="panel-heading">
-    <h3 id="frequency" class="panel-title">Statements by Frequency</h3>
-  </div>
-  <div class="panel-body">
-    Select a SQL statement to jump to it's position in the natural order.
-  </div>
-  <table class="table">
-    <tr>
-      <th>SQL</th>
-      <th class="text-right">Callers</th>
-      <th class="text-right">Total Seconds</th>
-      <th class="text-right">Avg Seconds</th>
-    </tr>
-    <% @event['events'].sort_by{|e| -e['count'] }.each do |event| %>
-      <tr>
-        <td><%= link_to(event['sql'].truncate(200), "##{event['index']}") %></td>
-        <td class="text-right"><%= event['count'] %></td>
-        <td class="text-right"><%= event['seconds'].round(1) %></td>
-        <td class="text-right"><%= event['avg_seconds'].round(1) %></td>
-      </tr>
-    <% end %>
-  </table>
-</div>
-
-<div class="panel panel-default sync-margin" style="margin-bottom: 1.75em">
-  <div class="panel-heading">
-    <h3 id="natural" class="panel-title">Statements in Natural Execute Order</h3>
-  </div>
-  <div class="panel-body">
-    Select a back trace to see the source code in the bottom panel.
-  </div>
-    <table class="table table-striped table-bordered">
-      <tr>
-        <th>SQL</th>
-        <th>Call Stack</th>
-      </tr>
-      <% last_sql   = nil %>
-      <% @event['events'].each do |event| %>
-        <tr>
-          <td class="td-scroll" id="<%= event['index'] %>">
-            <% clearfix = nil %>
-            <% if (dups = event['count'] - 1) > 1 %>
-              <% clearfix = 'clearfix' %>
-              <%= ghetto_bar(event['count'], class: 'duplicate pull-right') %>
-            <% end %>
-            <div class="<%= clearfix %> text-pre">-- duration: <%= event['duration'].round(1) %>s
-<%= SqlProbe::Utils.pretty_sql(event['sql']) -%></div>
-          </td>
-          <td class="text-pre td-scroll"><%= caller_links(event['caller']) %></td>
-        </tr>
-      <% end %>
-    </table>
-</div>
-
-<div id="caller-resizable" class="container">
-  <div class="pull-right">Use `j` and `k` to select a different trace</div>
-  <div id="caller-label"><em>Select a line of backtrace to load code.</em></div>
-  <div id="caller-code"></div>
-</div>
+<%= render 'details' %>
 
 <% content_for :javascript do %>
+  <script type="text/javascript" src="https://www.gstatic.com/charts/loader.js"></script>
   <script>
 $(document).ready(function() {
-
-  // configure editor
-  var editor = ace.edit("caller-code");
-  editor.getSession().setMode("ace/mode/ruby");
-  editor.setReadOnly(true);
-
-  var loadSource = function(link) {
-    var $link = $(link);
-    $.ajax({
-      url: $link.attr("href"),
-      success: function (data) {
-        $('#caller-label').text(data.file);
-        editor.setValue(data.code);
-
-        // resize() is required to fix a bug.
-        // @see http://stackoverflow.com/a/23748891/613772
-        editor.resize(true);
-        editor.gotoLine(data.line);
-
-        // keep focus on original clicked thing
-        $($link).focus();
-
-        var resizable = $('#caller-resizable');
-        if (resizable.height() < 200) {
-          resizable.height(200);
-        }
-      },
-      error: function (data) {
-        console.error('could not get source. data: ', data);
-      }
-    });
-  };
-
-  // Override default click behavior to make ajax
-  // request to get the source code from the locator
-  // and set the value of the editor to the response.
-  // Then jump to the line in the response.
-  $('.caller-link').on('click', function (e) {
-    e.preventDefault();
-    loadSource(e.target);
-  });
-
-  // setup hotkeys to jump between stack lines
-  $('.caller-link').keypress(function(e){
-    var jumpTo = null;
-    if ( event.key === 'j' ) {
-      jumpTo = $(e.target).nextAll('.caller-link')[0];
-    } else if (event.key === 'k') {
-      jumpTo = $(e.target).prevAll('.caller-link')[0];
-    }
-    if (jumpTo) {
-      jumpTo.click();
-    }
-  });
-
-  // Setup drag bar
-  var handleResize = function() {
-    editor.resize();
-    resizable.css('bottom', 0);
-    $('.sync-margin').css('margin-bottom',resizable.height() + 24);
-  };
-
-  var resizable = $('#caller-resizable');
-
-  resizable.resizable({
-    handles: 'n',
-    resize: handleResize
-  });
-  $(window).on('resize', handleResize);
 });
+
+window.sqlEventData = <%= raw @event['events'].to_json %>;
+
+(function() {
+  function loadTimeline() {
+    google.charts.load('current', {'packages':['timeline']});
+    google.charts.setOnLoadCallback(drawChart);
+    function drawChart() {
+      var container = document.getElementById('timeline');
+      var timeline = new google.visualization.Timeline(container);
+      var dataTable = new google.visualization.DataTable();
+
+      dataTable.addColumn({ type: 'string', id: 'Title' });
+      dataTable.addColumn({ type: 'number', id: 'Start' });
+      dataTable.addColumn({ type: 'number', id: 'End' });
+      dataTable.addRows(<%= raw JSON.pretty_generate(@timeline_data) %>);
+
+      var options = {
+        // @see http://stackoverflow.com/a/18643370/613772
+        // 42 is the magic number to get all the rows to display
+        // without overflow.
+        height: (<%= @timeline_data.group_by{|a,| a}.size %> * 42) + 40,
+        avoidOverlappingGridLines: false,
+        backgroundColor: 'transparent',
+        timeline: {
+          rowLabelStyle: { fontSize: 12, padding: 0}
+        }
+      };
+
+      timeline.draw(dataTable, options);
+      google.visualization.events.addListener(timeline, 'select', function() {
+        SqlDialog.show(sqlEventData[row]);
+      });
+    }
+  }
+
+  // FIXME: this is just for testing, remove when I'm done.
+  $(document).ready(function() {
+    SqlDialog.show(sqlEventData[0]);
+  });
+})();
   </script>
 <% end %>
