Add overall duration of each listen block

--- a/app/views/sql_probe/main/_pivot.erb
+++ b/app/views/sql_probe/main/_pivot.erb
@@ -29,6 +29,7 @@
   <tr class='clear'>
     <th class='clear'></th>
     <th class='rotate clear'><div><span>Total Queries</span></div></th>
+    <th class='rotate clear'><div><span>Duration ms</span></div></th>
     <% first[:values].each_key do |header| %>
       <th class='rotate clear'><div><span><%= header %></span></div></th>
     <% end %>
@@ -40,6 +41,7 @@
         <%= link_to(event[:name], event_path(path: event[:path])) %>
       </td>
       <th class="text-right td-pivot"><%= event[:queries] %></th>
+      <th class="text-right td-pivot"><%= event[:duration].round(1) %></th>
       <% event[:values].each_value do |count| %>
         <td class="text-center td-pivot"><%= count > 0 ? count : nil %></td>
       <% end %>
