Remove line wraps from YAML generation

--- a/app/views/sql_probe/events/view.erb
+++ b/app/views/sql_probe/events/view.erb
@@ -18,6 +18,7 @@
   codeEditor.setReadOnly(true);
   codeEditor.setValue(<%= raw @data.to_json %>);
   codeEditor.gotoLine(data.line);
+  codeEditor.setUseWrapMode(false);
 </script>
 <% end %>
 
