--- a/app/views/layouts/sql_probe/sql_probe.html.erb
+++ b/app/views/layouts/sql_probe/sql_probe.html.erb
@@ -14,7 +14,7 @@
 }
 
 body {
-  padding-top: 1em;
+  padding-top: 72px;
 }
 
 .text-pre {
@@ -40,6 +40,7 @@ body {
 </head>
 <body>
 
+<%= render 'layouts/sql_probe/navbar' %>
 <div class="container-fluid">
   <%= yield %>
 </div>
